[package]
name = "bank"
version = "0.1.0"
authors = ["ParallelChain Lab <info@parallelchain.io"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
borsh = "0.9"
sha2 = "0.10"
smart_contract = { package = "pchain-sdk", version = "0.1.0" }
