[package]
name = "my_bank"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13"
borsh = "=0.10.2"
pchain-sdk = { git = "https://github.com/parallelchain-io/pchain-sdk.git" }
