[package]
name = "contract_proxy"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pchain-sdk = { git = "https://github.com/parallelchain-io/pchain-sdk.git" }
pchain-types = "=0.4.3"
borsh = "=0.10.2"
base64url = "0.1.0"