[package]
name = "my_first_contract"
version = "0.1.0"
authors = ["ParallelChain Lab <info@parallelchain.io"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
parallelchain_sdk = { git = "https://github.com/parallelchain-io/parallelchain-sdk.git" }
