[package]
name = "parallelchain_sc_template"
version = "0.1.0"
authors = ["ParallelChain Lab <info@parallelchain.io"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "0.9"
smart_contract = { git = "https://github.com/parallelchain-io/parallelchain-sdk.git" }